popup height chnages for create attributes Imported from Changeset 2727

--- a/WarehouseEcommerce/Views/Theme/University/Shared/_CartItemsPartial.cshtml
+++ b/WarehouseEcommerce/Views/Theme/University/Shared/_CartItemsPartial.cshtml
@@ -217,13 +217,13 @@
                                                 </div>
                                                 @if (Model.ShowCartPopUp != true)
                                                 {
-                                                    <div class="inrow btm">
+                                                    @*<div class="inrow btm">
                                                         <span class="imgWrap"> </span>
                                                         <span class="prdName">
                                                             <i class="icon-love"></i>
                                                             Add to wishlist
                                                         </span>
-                                                    </div>
+                                                    </div>*@
                                                 }
                                             </div>
                                         </td>
