--- a/WarehouseEcommerce/Views/Theme/University/Shared/_FooterPartialArea.cshtml
+++ b/WarehouseEcommerce/Views/Theme/University/Shared/_FooterPartialArea.cshtml
@@ -1,6 +1,6 @@
 ﻿  <!-- footer section -->
 @model Ganedata.Core.Entities.Domain.TenantWebsites
-<footer class="nb_footer">
+<footer class="nb_footer mt-5">
     <div class="container">
         <div class="nb_footersec_inner">
             <a href="@Url.Action("Index","Home")" class="nb_foot_logo">
