--- a/WarehouseEcommerce/Content/Theme/University/app/css/northumbria_responsive.css
+++ b/WarehouseEcommerce/Content/Theme/University/app/css/northumbria_responsive.css
@@ -236,7 +236,7 @@
 
     .accordion {
         height: auto;
-        overflow-y: auto;
+        overflow: visible;
     }
 
         .accordion ul {
@@ -252,21 +252,26 @@
         width: 43%;
         display: inline-block;
         margin-bottom: 20px;
+        height: 260px;
     }
 
-        .nb_top_catSection .accordion ul li:last-child {
-            width: 43%;
-            left: auto;
-        }
+    .accordion ul li div a {
+        height: 260px;
+    }
 
-        .nb_top_catSection .accordion ul li div a h2 {
-            color: #000;
-            background: rgb(255, 255, 255);
-        }
+    .nb_top_catSection .accordion ul li:last-child {
+        width: 43%;
+        left: auto;
+    }
 
-        .nb_top_catSection .accordion ul li:nth-child(1) {
-            width: 43%;
-        }
+    .nb_top_catSection .accordion ul li div a h2 {
+        color: #000;
+        background: rgb(255, 255, 255);
+    }
+
+    .nb_top_catSection .accordion ul li:nth-child(1) {
+        width: 43%;
+    }
 
     .accordion ul:hover li {
         width: 43%;
