--- a/WMS/Views/Theme/Default/Shared/_AttrValueCreate.cshtml
+++ b/WMS/Views/Theme/Default/Shared/_AttrValueCreate.cshtml
@@ -20,6 +20,13 @@
                 @Html.ValidationMessageFor(model => model.SortOrder)
             </div>
         </div>
+        <div class="input-group h-100 justify-content-center align-items-center">
+            <label class="col-md-4">Color</label>
+            <div class="col-md-8">
+                @Html.DevExpress().ColorEditFor(model => model.Color, ColorEditorHelper.ColorEditSettingsMethod).GetHtml()
+                @Html.ValidationMessageFor(model => model.Color)
+            </div>
+        </div>
     </div>
     <div class="col-md-offset-2 col-md-10 bottom-right-popup">
         <input type="button" onclick="attributesvalueSave()" value="Save" class="btn btn-primary" />
