--- a/WMS/Views/Theme/Modern/Shared/_AttributeCreate.cshtml
+++ b/WMS/Views/Theme/Modern/Shared/_AttributeCreate.cshtml
@@ -13,6 +13,20 @@
                 @Html.ValidationMessageFor(model => model.AttributeName)
             </div>
         </div>
+        <div class="input-group h-100 justify-content-center align-items-center">
+            <label class="col-md-4">Sort Value<span style="color:red">*</span></label>
+            <div class="col-md-8">
+                @Html.EditorFor(model => model.SortOrder)
+                @Html.ValidationMessageFor(model => model.SortOrder)
+            </div>
+        </div>
+        <div class="input-group h-100 justify-content-center align-items-center">
+            <label class="col-md-4">Is Color Typed</label>
+            <div class="col-md-8">
+                @Html.EditorFor(model => model.IsColorTyped)
+                @Html.ValidationMessageFor(model => model.IsColorTyped)
+            </div>
+        </div>
     </div>
     <div class="col-md-offset-2 col-md-10 bottom-right-popup">
         <input type="button" onclick="attributeSave()" value="Save" class="btn btn-primary" />
