Fixed user delete error Imported from Changeset 2735

--- a/WMS/Views/Theme/Default/User/Delete.cshtml
+++ b/WMS/Views/Theme/Default/User/Delete.cshtml
@@ -69,7 +69,7 @@
             @Html.DisplayNameFor(model => model.CreatedBy)
         </dt>
         <dd>
-            @LayoutHelpers.GetUserName(Model.CreatedBy)
+            @LayoutHelpers.GetUserName(Model.CreatedBy ?? Model.UserId)
         </dd>
         <dt>
             @Html.DisplayNameFor(model => model.UpdatedBy)
