CE2-T38 Home Page Slider Text fix issue resolved Imported from Changeset 2739

--- a/WarehouseEcommerce/Content/Theme/University/app/css/northumbria_responsive.css
+++ b/WarehouseEcommerce/Content/Theme/University/app/css/northumbria_responsive.css
@@ -302,8 +302,8 @@
     }
 
         .nb_bannersec .np_bannerContentOuter .nb_bannerCaptionWrap h5 {
-            font-size: 12;
-            margin-bottom: 26px;
+            font-size: 12px;
+            margin-bottom: 10px;
         }
 
         .nb_bannersec .np_bannerContentOuter .nb_bannerCaptionWrap button {
