--- a/WarehouseEcommerce/Views/Theme/University/Shared/_CartItemsPartial.cshtml
+++ b/WarehouseEcommerce/Views/Theme/University/Shared/_CartItemsPartial.cshtml
@@ -144,7 +144,7 @@
                             <tbody>
                                 @if (Model.ShowCartPopUp != true)
                                 {
-                                    <tr>
+                                    <tr class="store-delivery">
                                         <td class="topTd" colspan="4"></td>
                                         @if (Model.IsCollectionAvailable)
                                         {
