--- a/WarehouseEcommerce/Views/Theme/University/Products/_DynamicFilters.cshtml
+++ b/WarehouseEcommerce/Views/Theme/University/Products/_DynamicFilters.cshtml
@@ -22,6 +22,7 @@
                                 aria-controls="collapseOne">
                             Price
                         </button>
+                        <input type="text" id="amount" readonly style="border:0; color:#f6931f; font-weight:bold;">
                     </h5>
                 </div>
                 <div id="collapseOne"
@@ -30,11 +31,15 @@
                      data-parent="#accordion">
                     <div class="nb_filter_body">
                         <ul class="nb_prd_filter_listouter">
-                            @foreach (var item in Model.PriceInterval)
-                            {
-                                <li class="list-group-item"><input type="checkbox" id="priceS" class="checkbox-inline" value="@(item.Item1+"_"+item.Item2)" @(Request.Url.OriginalString.ToLower().Contains(item.Item1 + "_" + item.Item2) ? "checked" : "")> @ViewBag.CurrencySymbol@item.Item1 - @ViewBag.CurrencySymbol@item.Item2</li>
 
-                            }
+                            <div id="slider-range"></div>
+
+                            <li class="list-group-item" style="display: none">
+                                <input type="checkbox" id="priceS" class="checkbox-inline" value="" @(Request.Url.OriginalString.ToLower().Contains("prices") ? "checked" : "")>
+
+                            </li>
+
+
 
                         </ul>
                     </div>
@@ -134,3 +139,45 @@
 </div>
 
 
+<script>
+    $(function () {
+
+        var min =@Model.PriceInterval.Item1;
+        var max=@Model.PriceInterval.Item2;
+        var priceIndex = window.location.href.indexOf("priceS-");
+        var prices = priceIndex > -1 ? window.location.href.substr((priceIndex + 7), 14) : null;
+        if (prices != null) {
+            prices = prices.split("_");
+            min = parseInt(prices[0]);
+            max = parseInt(prices[1]);
+            $('#priceS').prop('checked', true);
+            $("#priceS").val(@Model.CurrencySymbol + prices[0] + "_" + @Model.CurrencySymbol+prices[1]);
+        }
+        $("#slider-range").slider({
+            range: true,
+            min: @Model.PriceInterval.Item1,
+            max: @Model.PriceInterval.Item2,
+            values: [min, max],
+            slide: function(event, ui) {
+                $("#amount").val("@Model.CurrencySymbol" + ui.values[0] + " - @Model.CurrencySymbol" + ui.values[1]);
+                $("#amount").val("@Model.CurrencySymbol" +
+                    $("#slider-range").slider("values", 0) +
+                    " - @Model.CurrencySymbol" + $( "#slider-range" ).slider( "values", 1));
+            },
+            stop: function (event, ui) {
+
+                $("#priceS").val(ui.values[0] + "_" + ui.values[1]);
+
+
+                $("#priceS").click();
+
+
+            }
+        });
+        $("#amount").val(@Model.CurrencySymbol+min +
+            "-" +
+            @Model.CurrencySymbol+max);
+
+
+    });
+</script>
