--- a/WarehouseEcommerce/Views/Theme/University/Products/_ProductByAttributeSelector.cshtml
+++ b/WarehouseEcommerce/Views/Theme/University/Products/_ProductByAttributeSelector.cshtml
@@ -7,115 +7,103 @@
             <div class="col-md-12 col-lg-12 offset-lg-1">
                 <div class="nb_prd_det_rightsec">
                     <h2 class="head">@Model.Name</h2>
-                    <p class="subContent">
-                        @Model.SKUCode
-                    </p>
                     @Html.HiddenFor(model => model.ProductId);
                     <span class="prd_amnt">@ViewBag.CurrencySymbol @Model.SellPrice</span>
-                    <div class="attribute-refresh">
-                        <div class="availibility">
-                            @if (Model.InventoryStocks.FirstOrDefault()?.Available > 0)
-                            {
-                                <span>Availability:</span> <br />
-                                @((Model.InventoryStocks.FirstOrDefault().Available <= 10 ? "only " : "") + Model.InventoryStocks.FirstOrDefault().Available.ToString("#") + " items left");
-                            }
-                            else
-                            {
-                                <span></span> <br />
-                                <span>Currently unavailable.</span>
-                            }
-                        </div>
-
-                        @if (ViewBag.BaseProduct.ProductType != ProductKitTypeEnum.ProductByAttribute)
+                    <div class="availibility">
+                        @if (Model.InventoryStocks.Any(i => i.Available > 0))
                         {
-                            foreach (var item in Model.ProductAttributeValuesMap.Where(a => a.IsDeleted != true).OrderBy(m => m.ProductAttributeValues.AttributeId))
-                            {
-                                <div>
-                                    <div class="sizeWrap">
-                                        <p>@Html.Raw(item.ProductAttributeValues.ProductAttributes.AttributeName) : <span>@Html.Raw(item.ProductAttributeValues.Value)</span></p>
-                                    </div>
-                                </div>
-                            }
+                            <span>Availability:</span> <br />
+                            @((Model.InventoryStocks.Sum(i => i.Available) <= 10 ? "only " : "") + Model.InventoryStocks.Sum(i => i.Available).ToString("#") + " items left");
                         }
-
-                        @if (ViewBag.BaseProduct.ProductType == ProductKitTypeEnum.ProductByAttribute)
+                        else
                         {
-                            foreach (var item in ViewBag.AvailableAttributes)
-                            {
-                                var attribute = item.Key;
-                                <div>
-                                    <div class="sizeWrap">
-                                        @{
-                                            var selectedAttributeValue = Model.ProductAttributeValuesMap.FirstOrDefault(a => a.IsDeleted != true && a.ProductAttributeValues.AttributeId == attribute.AttributeId)?.ProductAttributeValues;
-                                        }
-
-                                        <p>@Html.Raw(attribute.AttributeName) : <span>@Html.Raw(selectedAttributeValue?.Value)</span></p>
-                                        <ul class="size_boxList">
-                                            @{
-                                                foreach (var attributeValue in item.Value)
-                                                {
-
-                                                    var relatedProducts = (ViewBag.RelatedProducts as IEnumerable<ProductMaster>).Where(p => p.SKUCode != Model.SKUCode && p.IsActive &&
-                                                                                                                p.ProductAttributeValuesMap.Any(m => m.IsDeleted != true && m.ProductAttributeValues.AttributeId == attribute.AttributeId &&
-                                                                                                                                                     m.ProductAttributeValues.AttributeValueId == attributeValue.AttributeValueId));
-
-                                                    if (relatedProducts.Count() > 1)
-                                                    {
-                                                        foreach (var currentProductAttribute in Model.ProductAttributeValuesMap.Where(am => am.IsDeleted != true && am.ProductAttributeValues.AttributeId != attribute.AttributeId))
-                                                        {
-                                                            var resultQuery = relatedProducts.Where(p => p.ProductAttributeValuesMap.Any(m => m.IsDeleted != true && m.ProductAttributeValues.AttributeId == currentProductAttribute.ProductAttributeValues.AttributeId &&
-                                                                                                                                              m.ProductAttributeValues.AttributeValueId == currentProductAttribute.AttributeValueId));
-
-                                                            if (resultQuery.Count() == 1)
-                                                            {
-                                                                relatedProducts = resultQuery;
-                                                                break;
-                                                            }
-
-                                                            if (resultQuery.Count() != 0)
-                                                            {
-                                                                relatedProducts = resultQuery;
-                                                            }
-                                                        }
-                                                    }
-
-                                                    var isAttributeWithSelection = true;
-
-                                                    var attribiteStatusCheckQuery = (ViewBag.RelatedProducts as IEnumerable<ProductMaster>).Where(m => m.SKUCode != Model.SKUCode &&
-                                                                                                                m.IsDeleted != true &&
-                                                                                                                m.IsActive == true &&
-                                                                                                                m.ProductAttributeValuesMap.Any(p => p.IsDeleted != true &&
-                                                                                                                                                     p.ProductAttributeValues.AttributeId == attribute.AttributeId &&
-                                                                                                                                                     p.ProductAttributeValues.AttributeValueId == attributeValue.AttributeValueId));
-
-                                                    foreach (var currentProductAttribute in Model.ProductAttributeValuesMap.Where(m => m.ProductAttributeValues.AttributeId != attribute.AttributeId))
-                                                    {
-                                                        attribiteStatusCheckQuery = attribiteStatusCheckQuery.Where(m => m.ProductAttributeValuesMap.Any(p => p.IsDeleted != true &&
-                                                                                                                                                              p.ProductAttributeValues.AttributeId == currentProductAttribute.ProductAttributeValues.AttributeId &&
-                                                                                                                                                              p.ProductAttributeValues.AttributeValueId == currentProductAttribute.AttributeValueId));
-
-                                                        isAttributeWithSelection = attribiteStatusCheckQuery.Any();
-                                                    }
-
-                                                    var isSelectedAttributeValue = attributeValue.AttributeValueId == selectedAttributeValue?.AttributeValueId;
-
-                                                    @Html.Raw("<li class=\"col3 " + (isSelectedAttributeValue ? "active" : "") + (!isSelectedAttributeValue && !isAttributeWithSelection ? "unavailable-attribute\">" : "\">") +
-                                                                    (isSelectedAttributeValue ? "<a href='javascript:;'id='selected-productids' data-productid=" + Model.ProductId + " data-skuCode=" + Model.SKUCode + ">" : $"<a href='javascript:;' onclick = 'getSelectedAttributesProduct(event,\"" + ViewBag.BaseProduct.SKUCode + "\"," + (relatedProducts.FirstOrDefault()?.ProductId ?? Model.ProductId) + "," + ViewBag.Quantity + ")'>") +
-                                                                    (attributeValue.ProductAttributes.AttributeName.ToLower().IndexOf("color") == -1 && attributeValue.ProductAttributes.AttributeName.ToLower().IndexOf("colour") == -1 ?
-                                                                    "<span>" + attributeValue.Value + "</span>" :
-                                                                    "<span style=\"background-color:" + attributeValue.Value + ";color:" + attributeValue.Value + "\">-</span>") +
-                                                                "</a></li>");
-
-                                                }
-                                            }
-                                        </ul>
-                                    </div>
-                                </div>
-                            }
+                            <span></span> <br />
+                            <span>Currently unavailable.</span>
                         }
                     </div>
-                </div>
 
+                    @if (ViewBag.BaseProduct.ProductType != Ganedata.Core.Entities.Enums.ProductKitTypeEnum.ProductByAttribute)
+                    {
+                        foreach (var item in Model.ProductAttributeValuesMap.Where(a => a.IsDeleted != true).OrderBy(m => m.ProductAttributeValues.AttributeId))
+                        {
+                            <div>
+                                <div class="sizeWrap">
+                                    <p>@Html.Raw(item.ProductAttributeValues.ProductAttributes.AttributeName) : <span>@Html.Raw(item.ProductAttributeValues.Value)</span></p>
+                                </div>
+                            </div>
+                        }
+                    }
+
+                    @if (ViewBag.BaseProduct.ProductType == Ganedata.Core.Entities.Enums.ProductKitTypeEnum.ProductByAttribute)
+                    {
+                        foreach (var item in ViewBag.AvailableAttributes)
+                        {
+                            var attribute = item.Key;
+                            var selectedAttributeValue = Model.ProductAttributeValuesMap.FirstOrDefault(a => a.IsDeleted != true && a.ProductAttributeValues.AttributeId == attribute.AttributeId)?.ProductAttributeValues;
+                            <div>
+                                <div class="sizeWrap">
+                                    <p>@Html.Raw(attribute.AttributeName) : <span>@Html.Raw(selectedAttributeValue?.Value)</span></p>
+                                    <ul class="size_boxList">
+                                        @{
+                                            foreach (var attributeValue in item.Value)
+                                            {
+
+                                                var relatedProducts = (ViewBag.RelatedProducts as IEnumerable<ProductMaster>).Where(p => p.SKUCode != Model.SKUCode &&
+                                                                                                            p.ProductAttributeValuesMap.Any(m => m.IsDeleted != true && m.ProductAttributeValues.AttributeId == attribute.AttributeId &&
+                                                                                                                                                 m.ProductAttributeValues.AttributeValueId == attributeValue.AttributeValueId));
+
+                                                if (relatedProducts.Count() > 1)
+                                                {
+                                                    foreach (var currentProductAttribute in Model.ProductAttributeValuesMap.Where(am => am.IsDeleted != true && am.ProductAttributeValues.AttributeId != attribute.AttributeId))
+                                                    {
+                                                        var resultQuery = relatedProducts.Where(p => p.ProductAttributeValuesMap.Any(m => m.IsDeleted != true && m.ProductAttributeValues.AttributeId == currentProductAttribute.ProductAttributeValues.AttributeId &&
+                                                                                                                                          m.ProductAttributeValues.AttributeValueId == currentProductAttribute.AttributeValueId));
+
+                                                        if (resultQuery.Count() == 1)
+                                                        {
+                                                            relatedProducts = resultQuery;
+                                                            break;
+                                                        }
+
+                                                        if (resultQuery.Count() != 0)
+                                                        {
+                                                            relatedProducts = resultQuery;
+                                                        }
+                                                    }
+                                                }
+
+                                                var isAttributeAvailableWithCurrentSelection = true;
+
+                                                var attribiteStatusCheckQuery = (ViewBag.RelatedProducts as IEnumerable<ProductMaster>).Where(m => m.SKUCode != Model.SKUCode &&
+                                                                                                            m.ProductAttributeValuesMap.Any(p => p.IsDeleted != true &&
+                                                                                                                                                 p.ProductAttributeValues.AttributeId == attribute.AttributeId &&
+                                                                                                                                                 p.ProductAttributeValues.AttributeValueId == attributeValue.AttributeValueId));
+
+                                                foreach (var currentProductAttribute in Model.ProductAttributeValuesMap.Where(m => m.ProductAttributeValues.AttributeId != attribute.AttributeId))
+                                                {
+                                                    attribiteStatusCheckQuery = attribiteStatusCheckQuery.Where(m => m.ProductAttributeValuesMap.Any(p => p.IsDeleted != true &&
+                                                                                                                                                          p.ProductAttributeValues.AttributeId == currentProductAttribute.ProductAttributeValues.AttributeId &&
+                                                                                                                                                          p.ProductAttributeValues.AttributeValueId == currentProductAttribute.AttributeValueId));
+
+                                                    isAttributeAvailableWithCurrentSelection = attribiteStatusCheckQuery.Any();
+                                                }
+
+                                                var isSelectedAttributeValue = attributeValue.AttributeValueId == selectedAttributeValue?.AttributeValueId;
+
+                                                @Html.Raw("<li class=\"col3 " + (isSelectedAttributeValue ? "active" : "") + (!isSelectedAttributeValue && !isAttributeAvailableWithCurrentSelection ? "unavailable-attribute\">" : "\">") +
+                                                                (isSelectedAttributeValue ? "<a href='javascript:;'id='selected-productids' data-productid=" + Model.ProductId + " data-skuCode=" + Model.SKUCode + ">" : $"<a href='javascript:;' onclick = 'getSelectedAttributesProduct(event,\"" + ViewBag.BaseProduct.SKUCode + "\"," + (relatedProducts.FirstOrDefault()?.ProductId ?? Model.ProductId) + "," + ViewBag.Quantity + ")'>") +
+                                                                (!attributeValue.ProductAttributes.IsColorTyped ?
+                                                                                "<span style=\"color:" + (!string.IsNullOrEmpty(attributeValue.Color?.Trim()) ? attributeValue.Color : attributeValue.Value) + "\">" + attributeValue.Value + "</span>" :
+                                                                                "<span style=\"background-color:" + (!string.IsNullOrEmpty(attributeValue.Color?.Trim()) ? attributeValue.Color : attributeValue.Value) + ";color:" + (!string.IsNullOrEmpty(attributeValue.Color?.Trim()) ? attributeValue.Color : attributeValue.Value) + "\">-</span>") +
+                                                            "</a></li>");
+                                            }
+                                        }
+                                    </ul>
+                                </div>
+                            </div>
+                        }
+                    }
+                </div>
             </div>
         </div>
 
