--- a/WarehouseEcommerce/Views/Theme/University/Products/_ProductByAttributeSelector.cshtml
+++ b/WarehouseEcommerce/Views/Theme/University/Products/_ProductByAttributeSelector.cshtml
@@ -7,13 +7,13 @@
             <div class="col-md-12 col-lg-12 offset-lg-1">
                 <div class="nb_prd_det_rightsec">
                     <h2 class="head">@Model.Name</h2>
-                    @Html.HiddenFor(model => model.ProductId);
+                    @Html.HiddenFor(model => model.ProductId)
                     <span class="prd_amnt">@ViewBag.CurrencySymbol @Model.SellPrice</span>
                     <div class="availibility">
                         @if (Model.InventoryStocks.Any(i => i.Available > 0))
                         {
                             <span>Availability:</span> <br />
-                            @((Model.InventoryStocks.Sum(i => i.Available) <= 10 ? "only " : "") + Model.InventoryStocks.Sum(i => i.Available).ToString("#") + " items left");
+                            @((Model.InventoryStocks.Sum(i => i.Available) <= 10 ? "only " : "") + Model.InventoryStocks.Sum(i => i.Available).ToString("#") + " items left")
                         }
                         else
                         {
