--- a/WarehouseEcommerce/Views/Theme/University/Shared/_ProductByAttributeSelectorModal.cshtml
+++ b/WarehouseEcommerce/Views/Theme/University/Shared/_ProductByAttributeSelectorModal.cshtml
@@ -4,7 +4,7 @@
 }
 <div class="modal fade" id="product-by-attribute-selector" tabindex="-1" role="dialog" aria-labelledby="exampleModalLabel" data-current-step="1" aria-hidden="true">
     <div class="modal-dialog" role="document">
-        <div class="modal-content">
+        <div class="modal-content nb_prd_det_rightsec">
             <div class="modal-header">
                 <h4 class="js-title-step">Select The Product Attributes</h4>
             </div>
@@ -13,11 +13,11 @@
             </div>
             <div class="modal-body product-by-attribute-selector-model-body">
             </div>
-            <div class="modal-footer">
-                <button type="button" class="btn btn-default" data-dismiss="modal">
+            <div class="modal-footer footSec botomBtnsec">
+                <button type="button" class="btmbtn sho" data-dismiss="modal">
                     Close
                 </button>
-                <button type="submit" class="btn btn-success" onclick="addProductByAttributeToCart()">
+                <button type="submit" class="addTobasket" onclick="addProductByAttributeToCart()">
                     Add To Basket
                 </button>
             </div>
